<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="serif"
            android:padding="10dp"
            android:text="@string/answer"
            android:textColor="@color/textHeader"
            android:textSize="14sp" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/questionHeaderBg"
            android:padding="16dp"
            android:text="@string/questionHeader1"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:padding="16dp"
            android:text="@string/question1"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/question1picture"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:padding="16dp"
            android:src="@drawable/question1picture" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="14dp">

                <RadioButton
                    android:id="@+id/question1answer1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="@string/question1answer1"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/question1answer2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="@string/question1answer2"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/question1answer3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="@string/question1answer3"
                    android:textSize="14sp" />

            </RadioGroup>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/questionHeaderBg"
            android:padding="16dp"
            android:text="@string/questionHeader2"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/questionHeaderBg"
            android:fontFamily="serif"
            android:padding="16dp"
            android:text="@string/question2"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="14dp">

            <CheckBox
                android:id="@+id/question2answer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/question2answer1" />

            <CheckBox
                android:id="@+id/question2answer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/question2answer2" />

            <CheckBox
                android:id="@+id/question2answer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/question2answer3" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/questionHeaderBg"
            android:padding="16dp"
            android:text="@string/questionHeader3"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:padding="16dp"
            android:text="@string/question3"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:padding="16dp"
            android:src="@drawable/question3picture" />

        <EditText
            android:id="@+id/question3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/question3hint"
            android:inputType="textCapWords"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/questionHeaderBg"
            android:padding="16dp"
            android:text="@string/questionHeader4"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:padding="16dp"
            android:text="@string/question4"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <RadioGroup
                android:id="@+id/radioGroup2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="@string/question4answer1"
                    android:textSize="14sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="@string/question4answer2"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/question4answer3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="@string/question4answer3"
                    android:textSize="14sp" />

                <RadioButton

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="@string/question4answer4"
                    android:textSize="14sp" />

            </RadioGroup>

            <Button
                android:id="@+id/score_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/textHeader"
                android:layout_marginTop="32dp"
                android:text="@string/submit"
                android:onClick="submitAnswers"
                />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
